--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.11-SNAPSHOT</version>
+        <version>2.6.10-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.wukong</groupId>
@@ -65,6 +65,18 @@
             <version>0.7.0</version>
         </dependency>
 
+        <!--验证码生成-->
+<!--        <dependency>-->
+<!--            <groupId>com.octo.captcha</groupId>-->
+<!--            <artifactId>jcaptcha</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.ramostear</groupId>
+            <artifactId>Happy-Captcha</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
